--- a/docs/css/footer.css
+++ b/docs/css/footer.css
@@ -50,3 +50,10 @@
 .itchio {
     color: var(--itchio);
 }
+
+@media only screen and (max-width: 950px) {
+    .footer-text {
+        padding-left: 25px;
+        padding-right: 25px;
+    }
+}
