--- a/docs/css/footer.css
+++ b/docs/css/footer.css
@@ -1,14 +1,19 @@
 .footer-info {
-    text-align: center;
     position: absolute;
     width: 100%;
-    font-weight: 400;
-    line-height: 30px;
     background-color: var(--background-color);
     border-top-left-radius: 30% 20%;
     border-top-right-radius: 30% 20%;
+}
+
+.footer-container {
+    text-align: center;
+    font-weight: 400;
+    line-height: 30px;
     padding-top: 25px;
     padding-bottom: 10px;
+    max-width: 2048px;
+    margin: 0 auto;
 }
 
 .space-between {
@@ -55,5 +60,9 @@
     .footer-text {
         padding-left: 25px;
         padding-right: 25px;
+    }
+    .footer-info {
+        width: 100%;
+        z-index: 100;
     }
 }
