--- a/docs/style_jadoraki.css
+++ b/docs/style_jadoraki.css
@@ -183,6 +183,16 @@
     .h3-color {
         color: var(--button-color);
     }
+    
+    div ul li {
+        list-style: none;
+    }
+    
+    .project-info {
+        background-color: var(--secondary-text-color);
+        border-radius: 8px;
+        padding: 15px 10px;
+    }
     /* ----- services -----  */
     
     #services {
