--- a/docs/style_jadoraki.css
+++ b/docs/style_jadoraki.css
@@ -65,9 +65,10 @@
     }
     
     nav ul li a {
-        color: var(--section-color);
+        color: var(--secondary-text-color);
         text-decoration: none;
         font-size: 18px;
+        font-weight: 600;
         position: relative;
     }
     
@@ -169,7 +170,8 @@
     }
     
     .tab-contents ul li span {
-        color: var(--button-color);
+        color: var(--section-color);
+        font-style: italic;
     }
     
     .tab-contents {
@@ -193,126 +195,70 @@
         border-radius: 8px;
         padding: 15px 10px;
     }
-    /* ----- services -----  */
     
-    #services {
-        padding: 30px 0;
+    hr.solid {
+        border-top: 1px solid var(--section-color);
+        opacity: 60%;
     }
     
-    .services-list {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        grid-gap: 40px;
-        margin-top: 50px;
-    }
-    
-    .services-list div {
-        background: var(--secondary-text-color);
-        padding: 40px;
-        font-size: 13px;
-        font-weight: 300;
-        border-radius: 10px;
-        transition: background 0.5s, transform 0.5s;
-    }
-    
-    .services-list div i {
-        font-size: 50px;
-        margin-bottom: 30px;
-    }
-    
-    .services-list div h2 {
-        font-size: 30px;
-        font-weight: 600;
-        margin-bottom: 15px;
-    }
-    
-    .services-list div a {
-        text-decoration: none;
+    .my-contributions ul li span {
         color: var(--section-color);
-        font-size: 12px;
-        margin-top: 20px;
-        display: inline-block;
-    }
-    
-    .services-list div:hover {
-        background: var(--title-color);
-        transform: translateY(-10px);
-    }
-    /* portfolio */
-    
-    #portfolio {
-        padding: 50px 0;
-    }
-    
-    .work-list {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        grid-gap: 40px;
-        margin-top: 50px;
-    }
-    
-    .unactive {
-        display: none;
-    }
-    
-    .work {
-        border-radius: 10px;
-        position: relative;
-        overflow: hidden;
-    }
-    
-    .work img {
-        width: 100%;
-        border-radius: 10px;
-        display: block;
-        transition: transform 0.5s;
-    }
-    
-    .layer {
-        width: 100%;
-        height: 0%;
-        background: linear-gradient(rgba(0, 0, 0, 0.6), var(--title-color));
-        border-radius: 10px;
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        overflow: hidden;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        padding: 0 40px;
-        text-align: center;
-        font-size: 14px;
-        transition: height 0.5s;
-    }
-    
-    .layer h3 {
         font-weight: 600;
-        margin-bottom: 20px;
-        font-size: 18px;
+        font-style: italic;
     }
     
-    .layer a {
-        margin-top: 20px;
-        color: var(--title-color);
-        text-decoration: none;
-        font-size: 18px;
-        line-height: 60px;
-        background-color: #FFFFFE;
-        width: 60px;
-        height: -60px;
-        border-radius: 50%;
-        text-align: center;
+    .slider-frame {
+        width: 100%;
+        height: auto;
+        overflow: hidden;
+        margin: 20px auto 0;
     }
     
-    .work:hover img {
-        transform: scale(1.1);
+    .slider-frame ul {
+        display: flex;
+        padding: 0;
+        width: 400%;
+        animation: slide 15s infinite;
     }
     
-    .work:hover .layer {
-        height: 100%;
-        ;
+    .slider-frame li {
+        list-style: none;
+        width: 100%;
+    }
+    
+    .slider-frame img {
+        width: 100%;
+    }
+    
+    @keyframes slide {
+        0% {
+            margin-left: 0%
+        }
+        20% {
+            margin-left: 0%
+        }
+        25% {
+            margin-left: -100%
+        }
+        45% {
+            margin-left: -100%
+        }
+        50% {
+            margin-left: -200%
+        }
+        70% {
+            margin-left: -200%
+        }
+        75% {
+            margin-left: -300%
+        }
+        95% {
+            margin-left: -300%
+        }
+    }
+    
+    .buttons {
+        display: flex;
     }
     
     .btn {
@@ -330,76 +276,10 @@
     .btn:hover {
         background-color: var(--button-color);
     }
-    /* ----- contact -----  */
-    
-    .contact-left {
-        flex-basis: 35%;
-    }
-    
-    .contact-left p {
-        margin-top: 30px;
-    }
-    
-    .contact-left p i {
-        color: var(--button-color);
-        margin-right: 15px;
-        font-size: 25px;
-    }
-    
-    .contact-right {
-        flex-basis: 60%;
-    }
-    
-    .social-icons {
-        margin-top: 30px;
-    }
-    
-    .social-icons a {
-        text-decoration: none;
-        font-size: 30px;
-        margin-right: 15px;
-        color: var(--section-color);
-        display: inline-block;
-        transition: transform 0.5s;
-    }
-    
-    .social-icons a:hover {
-        color: var(--button-color);
-        transform: translateY(-5px);
-    }
     
     .btn.btn2 {
         display: inline-block;
         background: var(--button-color);
-    }
-    
-    .contact-right form {
-        width: 100%;
-    }
-    
-    form input,
-    form textarea {
-        width: 100%;
-        border: 0;
-        outline: none;
-        background-color: var(--secondary-text-color);
-        padding: 15px;
-        margin: 15px 0;
-        font-size: 18px;
-        border-radius: 6px;
-        color: var(--text-color);
-    }
-    
-    form input::placeholder,
-    form textarea::placeholder {
-        color: #b7b7b4;
-    }
-    
-    form .btn2 {
-        padding: 14px 60px;
-        font-size: 18px;
-        margin-top: 20px;
-        cursor: pointer;
     }
     
     .copyright {
@@ -437,9 +317,6 @@
     }
     
     @media only screen and (max-width: 600px) {
-        #header {
-            background-image: url(assets/background-mobile.png);
-        }
         .header-text {
             margin-top: 100%;
             font-size: 16px;
