--- a/docs/style_jadoraki.css
+++ b/docs/style_jadoraki.css
@@ -38,7 +38,7 @@
     #header {
         width: 100%;
         height: 100vh;
-        background-image: url(assets/jadoraki_title.png);
+        background-image: url(assets/Jadoraki/jadoraki_title.png);
         background-size: cover;
         background-position: center;
     }
