--- a/docs/style.css
+++ b/docs/style.css
@@ -38,7 +38,7 @@
     #header {
         width: 100%;
         height: 100vh;
-        background-image: url(assets/background.png);
+        background-image: url(assets/Index/background.png);
         background-size: cover;
         background-position: center;
     }
@@ -424,7 +424,7 @@
     
     @media only screen and (max-width: 600px) {
         #header {
-            background-image: url(assets/background-mobile.png);
+            background-image: url(assets/Index/background-mobile.png);
         }
         .header-text {
             margin-top: 100%;
