--- a/docs/style_origins.css
+++ b/docs/style_origins.css
@@ -38,7 +38,7 @@
     #header {
         width: 100%;
         height: 100vh;
-        background-image: url(assets/Saturada/title-mockup.png);
+        background-image: url(assets/Origins/title-mockup.png);
         background-size: cover;
         background-position: center;
     }
@@ -65,7 +65,7 @@
     }
     
     nav ul li a {
-        color: var(--section-color);
+        color: var(--secondary-text-color);
         text-decoration: none;
         font-size: 18px;
         font-weight: 600;
